2000-02-22  Manuel Guesdon <mguesdon@sbuilders.com>

	* GNUmakefile: install gsantlr in system root (GNUSTEP_INSTALLATION_DIR)
		instead of user root

2000-01-27  Manuel Guesdon <mguesdon@sbuilders.com>

	* Added LICENSE and README files
	* Added ObjcCodeGenerator directory
	
2000-01-27  Manuel Guesdon <mguesdon@sbuilders.com>
	
	* ANTLRCharBuffer.m, ANTLRCharScanner.m, ANTLRASTFactory.m, 
		ANTLRLog.m: Helge Hess changes tp compile with 
		libFoundation

	